<resources>
    <string name="settings">Settings</string>
    <string name="app_name">The Band Database</string>
    <string name="details">Details</string>
    <string name="messages">Messages</string>
    <string name="signature">Your Signature</string>
    <string name="notSet">Not set</string>
    <string name="ReplyAction">Default reply action</string>
    <string name="reply">Reply</string>
    <string name="sync">Sync</string>
    <string name="syncPeriodically">Sync email periodically</string>
    <string name="download">Download incoming attachments</string>
    <string name="OnlyDownload">Only download attachments when manually requested</string>

    <string-array name="bands">
        <item>The Beatles</item>
        <item>Nirvana</item>
        <item>U2</item>
        <item>David Bowie</item>
        <item>The Doors</item>
        <item>Led Zeppelin</item>
        <item>Fleetwood Mac</item>
        <item>The Smashing Pumpkins</item>
        <item>Radiohead</item>
        <item>The Rolling Stones</item>
        <item>The Who</item>
        <item>Pink Floyd</item>
        <item>Queen</item>
        <item>Prince</item>
        <item>Pearl Jam</item>
        <item>Jimi Hendrix</item>
    </string-array>

    <string-array name="descriptions">
        <item>An English rock band that formed in Liverpool in 1960.</item>
        <item>An American rock band that formed in Washington in 1987.</item>
        <item>An Irish rock band from Dublin that formed in 1976.</item>
        <item>A British singer songwriter and actor</item>
        <item>An American rock band formed in LA in 1965</item>
        <item>An English rock band formed in London in 1968</item>
        <item>A British-American rock band formed in London in 1967</item>
        <item>An American alternative rock band from Chicago formed in 1988</item>
        <item>An English rock band formed in 1985</item>
        <item>An English rock band formed in London in 1962</item>
        <item>An English rock band formed in London in 1964</item>
        <item>An English rock band formed in London in 1964</item>
        <item>A British rock band formed in London in 1970</item>
        <item>An American singer-songwriter, multi instrumentalist, and record producer</item>
        <item>An American rock band formed in Seattle in 1990</item>
        <item>An American musician, singer, and songwriter. He became famous in 1967</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>