<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id ="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText,UseSwitchCompatOrMaterialXml">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:textColor="@color/green"
        android:layout_marginTop="30dp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signature"
        app:layout_constraintStart_toStartOf="@id/textViewMessages"
        app:layout_constraintTop_toBottomOf="@id/textViewMessages"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewNotSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notSet"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewSignature"
        app:layout_constraintStart_toStartOf="@id/textViewSignature"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewReplyAction"
        android:text="@string/ReplyAction"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNotSet"
        app:layout_constraintStart_toStartOf="@id/textViewNotSet"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewReply"
        android:text="@string/reply"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewReplyAction"
        app:layout_constraintStart_toStartOf="@id/textViewReplyAction"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/divider"
        android:layout_marginTop="12dp"
        android:background="?android:listDivider"
        app:layout_constraintTop_toBottomOf="@id/textViewReply"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSync"
        android:text="@string/sync"
        android:textColor="@color/green"
        android:layout_marginTop="15dp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <TextView
        android:id="@+id/textViewSyncPeriodically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/syncPeriodically"
        app:layout_constraintStart_toStartOf="@id/textViewSync"
        app:layout_constraintTop_toBottomOf="@id/textViewSync"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDownloadIncoming"
        android:text="@string/download"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/textViewSyncPeriodically"
        app:layout_constraintTop_toBottomOf="@id/textViewSyncPeriodically"/>

    <TextView
        android:id="@+id/textViewOnlyDownload"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:text="@string/OnlyDownload"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/textViewDownloadIncoming"
        app:layout_constraintTop_toBottomOf="@id/textViewDownloadIncoming" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="51dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/textViewSyncPeriodically"
        tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/textViewDownloadIncoming" />




</androidx.constraintlayout.widget.ConstraintLayout>